--- a/index.html
+++ b/index.html
@@ -45,12 +45,57 @@
       <button>Buy Now</button>
     </div>
   </div>
+  </div>
+  <div class="top-requests">
+    <h2>Top Requests</h2>
+    <div class="boxes-container">
+    <div class="box">
+      <div class="img-parent">
+      <img src="https://img.freepik.com/free-vector/smart-watch-realistic-image-black_1284-11873.jpg?w=740&t=st=1674070138~exp=1674070738~hmac=6535d21c7831dd182464717a16305c847e208a6c2ba65c19c1aa85c89107b47e" alt="">
+    </div>
+      <h3>ABC</h3>
+      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
+      <div class="stars">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+      </div>
+    </div>
+    <div class="box">
+      <div class="img-parent">
+      <img src="https://cdn.pixabay.com/photo/2018/03/26/22/17/watch-3264349__340.jpg" alt="">
+    </div>
+      <h3>ABC</h3>
+      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
+      <div class="stars">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+      </div>
+    </div>
+    <div class="box">
+      <div class="img-parent">
+      <img src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png" alt="">
+    </div>
+      <h3>ABC</h3>
+      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
+      <div class="stars">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+      </div>
+    </div>
+    <div class="box">
+      <div class="img-parent">
+      <img src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835" alt="">
+    </div>
+      <h3>ABC</h3>
+      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
 
+      <div class="stars">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+      </div>
+    </div>
+  </div>
   </div>
     
-    <script src="./Three.js"></script>
-    <script src="./GLTFLoader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-    <script type="module" src="./landing-page.js"></script>
+  <script src="./Three.js"></script>
+  <script src="./GLTFLoader.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+  <script type="module" src="./landing-page.js"></script>
   </body>
 </html>
