change a watch image

--- a/index.html
+++ b/index.html
@@ -57,40 +57,40 @@
       <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
       <h5>$2000</h5>
       <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
       </div>
     </div>
     <div class="box">
       <div class="img-parent">
-      <img src="https://cdn.pixabay.com/photo/2018/03/26/22/17/watch-3264349__340.jpg" alt="">
+      <img src="./images/watch-1660232__340-removebg-preview.png" alt="A Watch">
     </div>
       <h3>ABC</h3>
       <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
       <h5>$1000</h5>
       <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
       </div>
     </div>
     <div class="box">
       <div class="img-parent">
-      <img src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png" alt="">
+      <img src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png" alt="A Watch">
     </div>
       <h3>ABC</h3>
       <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
       <h5>$3000</h5>
       <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
       </div>
     </div>
     <div class="box">
       <div class="img-parent">
-      <img src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835" alt="">
+      <img src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835" alt="A Watch">
     </div>
       <h3>ABC</h3>
       <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
     <h5>$4300</h5>
       <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="">
+        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
       </div>
     </div>
   </div>
