--- a/index.html
+++ b/index.html
@@ -4,101 +4,285 @@
     <meta charset="utf-8" />
     <title>My first three.js app</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./animated.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/animated.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome Library -->
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
+    <!-- Start Navbar -->
+    <div class="navbar-container">
+      <svg
+        stroke="currentColor"
+        fill="currentColor"
+        stroke-width="0"
+        viewBox="0 0 16 16"
+        class="navbar-list-icon"
+        height="1em"
+        width="1em"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
+        ></path></svg
+      ><a class="navlink active" href="/" aria-current="page"
+        ><h3 class="navbar-heading">Watch Online</h3></a
+      ><svg
+        stroke="currentColor"
+        fill="currentColor"
+        stroke-width="0"
+        viewBox="0 0 24 24"
+        class="navbar-search-icon"
+        height="1em"
+        width="1em"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"
+        ></path>
+      </svg>
+    </div>
+    <!-- End Navbar -->
+    <!-- Start Cover Container -->
     <div class="cover-container" id="cover-container">
       <div class="cover" id="cover">
-        <h1  id="cover-heading">The Best Watch</h1>
-        <p  id="cover-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vel animi soluta vero voluptate recusandae non fugit excepturi doloremque beatae placeat natus velit molestias quos, illum esse odio accusantium quam?
+        <h1 id="cover-heading">The Best Watch</h1>
+        <p id="cover-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde vel
+          animi soluta vero voluptate recusandae non fugit excepturi doloremque
+          beatae placeat natus velit molestias quos, illum esse odio accusantium
+          quam?
         </p>
-		<button id="english" class="english">English</button>
-		<button id="spanish" class="spanish">Spanish</button>
+        <button id="english" class="english">English</button>
+        <button id="spanish" class="spanish">Spanish</button>
       </div>
       <!-- <div class="flash">
         <div></div>
       </div> -->
       <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#4b0082" fill-opacity="1" d="M0,288L48,282.7C96,277,192,267,288,240C384,213,480,171,576,154.7C672,139,768,149,864,154.7C960,160,1056,160,1152,133.3C1248,107,1344,53,1392,26.7L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg> -->
-    <div id="canvas"></div>
+      <div id="canvas"></div>
     </div>
+    <!-- End Cover Container -->
+    <!-- Start Packages -->
     <div class="packages">
-    <h2 >Our Packages</h2>
-    <div class="card-parent">
-    <div class="card">
-      <h3>Basic</h3>
-      <p>Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed quam eveniet et incidunt sapiente mollitia deserunt molestias minima, est nulla ea, asperiores eaque itaque enim!</p>
-      <button>Buy Now</button>
-    </div>
-    <div class="card">
-      <h3>Standard</h3>
-      <p>Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed quam eveniet et incidunt sapiente mollitia deserunt molestias minima, est nulla ea, asperiores eaque itaque enim!</p>
-      <button>Buy Now</button>
-    </div>
-    <div class="card">
-      <h3>Premium</h3>
-      <p>Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed quam eveniet et incidunt sapiente mollitia deserunt molestias minima, est nulla ea, asperiores eaque itaque enim!</p>
-      <button>Buy Now</button>
-    </div>
-  </div>
-  </div>
-  <div class="top-requests">
-    <h2>Top Requests</h2>
-    <div class="boxes-container">
-    <div class="box">
-      <div class="img-parent">
-      <img src="https://img.freepik.com/free-vector/smart-watch-realistic-image-black_1284-11873.jpg?w=740&t=st=1674070138~exp=1674070738~hmac=6535d21c7831dd182464717a16305c847e208a6c2ba65c19c1aa85c89107b47e" alt="">
-    </div>
-      <h3>ABC</h3>
-      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
-      <h5>$2000</h5>
-      <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
+      <h2>Our Packages</h2>
+      <div class="card-parent">
+        <div class="card">
+          <h3>Basic</h3>
+          <p>
+            Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed
+            quam eveniet et incidunt sapiente mollitia deserunt molestias
+            minima, est nulla ea, asperiores eaque itaque enim!
+          </p>
+          <button>Buy Now</button>
+        </div>
+        <div class="card">
+          <h3>Standard</h3>
+          <p>
+            Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed
+            quam eveniet et incidunt sapiente mollitia deserunt molestias
+            minima, est nulla ea, asperiores eaque itaque enim!
+          </p>
+          <button>Buy Now</button>
+        </div>
+        <div class="card">
+          <h3>Premium</h3>
+          <p>
+            Lorem ipsum dolor sit Ut veniam recusandae consequatur suscipit sed
+            quam eveniet et incidunt sapiente mollitia deserunt molestias
+            minima, est nulla ea, asperiores eaque itaque enim!
+          </p>
+          <button>Buy Now</button>
+        </div>
       </div>
     </div>
-    <div class="box">
-      <div class="img-parent">
-      <img src="./images/watch-1660232__340-removebg-preview.png" alt="A Watch">
-    </div>
-      <h3>ABC</h3>
-      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
-      <h5>$1000</h5>
-      <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
+    <!-- End Packages -->
+    <!-- Start Top Requests -->
+    <div class="top-requests">
+      <h2>Top Requests</h2>
+      <div class="boxes-container">
+        <div class="box">
+          <div class="img-parent">
+            <img
+              src="https://img.freepik.com/free-vector/smart-watch-realistic-image-black_1284-11873.jpg?w=740&t=st=1674070138~exp=1674070738~hmac=6535d21c7831dd182464717a16305c847e208a6c2ba65c19c1aa85c89107b47e"
+              alt=""
+            />
+          </div>
+          <h3>ABC</h3>
+          <p>
+            Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
+            reprehenderit expedita libero voluptatibus magnam. Id, quia?
+          </p>
+          <h5>$2000</h5>
+          <div class="stars">
+            <img
+              src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png"
+              alt="stars"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-parent">
+            <img
+              src="./images/watch-1660232__340-removebg-preview.png"
+              alt="A Watch"
+            />
+          </div>
+          <h3>ABC</h3>
+          <p>
+            Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
+            reprehenderit expedita libero voluptatibus magnam. Id, quia?
+          </p>
+          <h5>$1000</h5>
+          <div class="stars">
+            <img
+              src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png"
+              alt="stars"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-parent">
+            <img
+              src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png"
+              alt="A Watch"
+            />
+          </div>
+          <h3>ABC</h3>
+          <p>
+            Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
+            reprehenderit expedita libero voluptatibus magnam. Id, quia?
+          </p>
+          <h5>$3000</h5>
+          <div class="stars">
+            <img
+              src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png"
+              alt="stars"
+            />
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-parent">
+            <img
+              src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835"
+              alt="A Watch"
+            />
+          </div>
+          <h3>ABC</h3>
+          <p>
+            Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
+            reprehenderit expedita libero voluptatibus magnam. Id, quia?
+          </p>
+          <h5>$4300</h5>
+          <div class="stars">
+            <img
+              src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png"
+              alt="stars"
+            />
+          </div>
+        </div>
       </div>
+      <a class="package-button" href="/package.html">Our Features</a>
     </div>
-    <div class="box">
-      <div class="img-parent">
-      <img src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png" alt="A Watch">
-    </div>
-      <h3>ABC</h3>
-      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
-      <h5>$3000</h5>
-      <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
+    <!-- End Top Requests -->
+
+    <!-- Start Footer  -->
+    <div class="footer-parent">
+      <div class="container">
+        <div class="footer">
+          <div class="info">
+            <h3>AZ</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur assumenda deleniti sint adipisci atque reprehenderit
+              aut quae rerum dolore saepe. Earum similique iure nulla, hic magni
+              vero assumenda quos quidem?
+            </p>
+          </div>
+          <div class="links">
+            <ul>
+              <li>
+                <a href="#">Important Link 1</a>
+              </li>
+              <li>
+                <a href="#">Important Link 1</a>
+              </li>
+              <li>
+                <a href="#">Important Link 1</a>
+              </li>
+              <li>
+                <a href="#">Important Link 1</a>
+              </li>
+              <li>
+                <a href="#">Important Link 1</a>
+              </li>
+            </ul>
+          </div>
+          <div class="address">
+            <div class="location">
+              <div class="icon">
+                <i class="fa-solid fa-location-dot"></i>
+              </div>
+              <div class="location-text">E, B Room Number 220</div>
+            </div>
+            <div class="business">
+              <div class="icon">
+                <i class="fa-solid fa-clock"></i>
+              </div>
+              <div class="location-text">
+                Business Hours: From 10:00 To 18:00
+              </div>
+            </div>
+            <div class="location">
+              <div class="icon">
+                <i class="fa-solid fa-phone"></i>
+              </div>
+              <div class="location-text">
+                <span>+20123456789</span> <span>+20198765432</span>
+              </div>
+            </div>
+          </div>
+          <div class="images">
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+            <img
+              src="https://cdn.pixabay.com/photo/2022/11/17/17/11/sea-7598498__340.jpg"
+              alt="footer-photo"
+            />
+          </div>
+        </div>
       </div>
+      <footer>Made By AZ</footer>
     </div>
-    <div class="box">
-      <div class="img-parent">
-      <img src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835" alt="A Watch">
-    </div>
-      <h3>ABC</h3>
-      <p>Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti reprehenderit expedita libero voluptatibus magnam. Id, quia?</p>
-    <h5>$4300</h5>
-      <div class="stars">
-        <img src="https://cdn.pixabay.com/photo/2022/01/11/12/16/rating-6930474__340.png" alt="stars">
-      </div>
-    </div>
-  </div>
-  </div>
-    
-  <script src="./Three.js"></script>
-  <script src="./GLTFLoader.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-  <script type="module" src="./landing-page.js"></script>
+    <!-- End Footer  -->
+    <script src="./Three.js"></script>
+    <script src="./GLTFLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script type="module" src="./landing-page.js"></script>
   </body>
 </html>
