--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </div>
         </div>
       </div>
-      <a class="package-button" href="/package.html">Our Features</a>
+      <a class="package-button" href="package.html">Our Features</a>
     </div>
     <!-- End Top Requests -->
 
