--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           fill-rule="evenodd"
           d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"
         ></path></svg
-      ><a class="navlink active" href="/" aria-current="page"
+      ><a class="navlink active" href="index.html" aria-current="page"
         ><h3 class="navbar-heading">Watch Online</h3></a
       ><svg
         stroke="currentColor"
