ADD product page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My first three.js app</title>
+    <title>Three.js app</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./CSS/animated.css" />
@@ -109,12 +109,14 @@
       <h2>Top Requests</h2>
       <div class="boxes-container">
         <div class="box">
-          <div class="img-parent">
-            <img
-              src="https://img.freepik.com/free-vector/smart-watch-realistic-image-black_1284-11873.jpg?w=740&t=st=1674070138~exp=1674070738~hmac=6535d21c7831dd182464717a16305c847e208a6c2ba65c19c1aa85c89107b47e"
-              alt=""
-            />
-          </div>
+          <a href="/product.html"> 
+            <div class="img-parent">
+              <img
+                src="https://cdn.pixabay.com/photo/2018/03/19/15/54/clock-3240331__340.jpg"
+                alt=""
+              />
+            </div>
+          </a>
           <h3>ABC</h3>
           <p>
             Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
@@ -129,12 +131,14 @@
           </div>
         </div>
         <div class="box">
+          <a href="/product.html">
           <div class="img-parent">
             <img
-              src="./images/watch-1660232__340-removebg-preview.png"
+              src="https://cdn.pixabay.com/photo/2017/02/12/12/54/polar-a360-2059937__340.jpg"
               alt="A Watch"
             />
           </div>
+        </a>
           <h3>ABC</h3>
           <p>
             Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
@@ -149,12 +153,14 @@
           </div>
         </div>
         <div class="box">
+          <a href="/product.html">
           <div class="img-parent">
             <img
-              src="https://cdn.pixabay.com/photo/2014/01/25/00/12/clock-251321__340.png"
+              src="https://cdn.pixabay.com/photo/2015/08/15/15/21/smart-watch-889639__340.jpg"
               alt="A Watch"
             />
           </div>
+        </a>
           <h3>ABC</h3>
           <p>
             Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
@@ -169,12 +175,14 @@
           </div>
         </div>
         <div class="box">
+          <a href="/product.html">
           <div class="img-parent">
             <img
-              src="https://img.freepik.com/free-photo/stylish-golden-watch-white-surface_181624-27078.jpg?size=338&ext=jpg&ga=GA1.1.489202319.1659533835"
+              src="https://cdn.pixabay.com/photo/2016/07/06/17/08/apple-1500849__340.jpg"
               alt="A Watch"
             />
           </div>
+        </a>
           <h3>ABC</h3>
           <p>
             Lorem ipsum dolor sit amet,qui deleniti. Laboriosam eius deleniti
