FIX product page link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h2>Top Requests</h2>
       <div class="boxes-container">
         <div class="box">
-          <a href="/product.html"> 
+          <a href="product.html"> 
             <div class="img-parent">
               <img
                 src="https://cdn.pixabay.com/photo/2018/03/19/15/54/clock-3240331__340.jpg"
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="box">
-          <a href="/product.html">
+          <a href="product.html">
           <div class="img-parent">
             <img
               src="https://cdn.pixabay.com/photo/2017/02/12/12/54/polar-a360-2059937__340.jpg"
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="box">
-          <a href="/product.html">
+          <a href="product.html">
           <div class="img-parent">
             <img
               src="https://cdn.pixabay.com/photo/2015/08/15/15/21/smart-watch-889639__340.jpg"
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="box">
-          <a href="/product.html">
+          <a href="product.html">
           <div class="img-parent">
             <img
               src="https://cdn.pixabay.com/photo/2016/07/06/17/08/apple-1500849__340.jpg"
